src/parser/object/snapshots/pdf2docx__parser__object__tests__dict with one entry.snap
---
source: src/parser/object/tests.rs
expression: parse_dict(buf.as_ref()).unwrap()
---
(
    [],
    {
        Name(
            [
                47,
                84,
                121,
                112,
                101,
            ],
        ): Name(
            Name(
                [
                    47,
                    67,
                    97,
                    116,
                    97,
                    108,
                    111,
                    103,
                ],
            ),
        ),
    },
)
