src/parser/object/snapshots/pdf2docx__parser__object__tests__empty name key.snap
---
source: src/parser/object/tests.rs
expression: parse_dict(buf.as_ref()).unwrap()
---
(
    [],
    {
        Name(
            [],
        ): Name(
            Name(
                [
                    105,
                    100,
                ],
            ),
        ),
    },
)
