src/parser/object/snapshots/pdf2docx__parser__object__tests__empty.snap
---
source: src/parser/object/tests.rs
expression: parse_stream(buf.as_ref()).unwrap()
---
(
    [],
    (
        {
            Name(
                [
                    47,
                    76,
                    101,
                    110,
                    103,
                    116,
                    104,
                ],
            ): Integer(
                0,
            ),
        },
        [],
    ),
)
