src/parser/object/snapshots/pdf2docx__parser__object__tests__nested empty dict.snap
---
source: src/parser/object/tests.rs
expression: parse_dict(buf.as_ref()).unwrap()
---
(
    [],
    {
        Name(
            [
                47,
                105,
                100,
            ],
        ): Dictionary(
            {},
        ),
    },
)
