src/parser/object/snapshots/pdf2docx__parser__object__tests__nested.snap
---
source: src/parser/object/tests.rs
expression: parse_dict(buf.as_ref()).unwrap()
---
(
    [],
    {
        Name(
            [
                47,
                73,
                110,
                110,
                101,
                114,
            ],
        ): Dictionary(
            {},
        ),
    },
)
