src/parser/object/snapshots/pdf2docx__parser__object__tests__parse_indirected_object.snap
---
source: src/parser/object/tests.rs
expression: parse_indirected_object(buf.as_ref()).unwrap()
---
(
    [],
    IndirectObject {
        id: 1,
        generation: 0,
        object: Null,
    },
)
