src/parser/object/snapshots/pdf2docx__parser__object__tests__parse_reference.snap
---
source: src/parser/object/tests.rs
expression: parse_reference(buf.as_ref()).unwrap()
---
(
    [],
    Reference {
        id: 1,
        generation: 0,
    },
)
